# CoilWhineBeGone

./: CMakeLists.txt  README.md  cpucycleburner.cpp  cpucycleburner.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/: cpucycleburner.cpp  cpucycleburner.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settingsmanager.cpp  settingsmanager.h
